kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tic-tac-toe
  labels:
    app: tic-tac-toe
spec:
  type: ClusterIP # <-- changed from LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: tic-tac-toe
